--- a/package.json
+++ b/package.json
@@ -1,6 +1,21 @@
 {
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "firebase-admin": "^12.0.0"
-  }
+    "firebase-admin": "^12.0.0",
+    "jsonwebtoken": "^9.0.2"
+  },
+  "name": "parcel-tracker-backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "server.js"
+  },
+  "keywords": [],
+  "author": "Parth gujjar",
+  "license": "ISC",
+  "description": "This backend is all about for the parcel tracking system."
 }
